--- a/src/style/colors.css
+++ b/src/style/colors.css
@@ -30,8 +30,7 @@ span{
 .green-btn{
     background: #4BAF32 !important;
     padding: 15px 40px !important;
-    font-family: Lato;
-    font-weight: 900;
+    font-weight: 700;
     font-size: 16px !important;
     line-height: 19px;
     text-align: center;
@@ -60,7 +59,7 @@ span{
 }
 
 .h4-green{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif !important;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
