--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -38,6 +38,7 @@
 .page-title{
     font-size: 35px;
     line-height: 42px;
+    font-family: 'Lato', sans-serif;
 }
 
 .page-description{
@@ -54,16 +55,16 @@
 }
 
 .site-h3{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 18px !important;
+    line-height: 22px !important;
     color: #1A1D1A;
 }
 
 .h2-site{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -73,7 +74,7 @@
 }
 
 .works-number{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 35px;
@@ -84,14 +85,25 @@
 }
 
 .summary{
-    font-family: Lato;
-    font-style: normal;
-    font-weight: normal;
+    font-family: 'Lato', sans-serif;
     font-size: 24px;
     line-height: 150%;
 
     color: #1A1D1A;
 }
+.header-two > .router-link-active {
+    font-weight: 100 !important;
+}
+.gray-title{
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 150%;
+    color: #1A1D1A;
+
+    opacity: 0.4;
+}
+
 
 .iphone-main-img{
     position: absolute;
@@ -112,7 +124,7 @@
 }
 
 .page-description-big{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -133,8 +145,7 @@
     height: 75%;
 }
 .header-bar-item{
-    font-family: Lato;
-    font-style: normal;
+    font-family: 'Lato', sans-serif;
     font-size: 15px;
     line-height: 18px;
     color: #1A1D1A !important;
@@ -147,9 +158,7 @@
 }
 
 .italic-text-header{
-    font-family: Lato;
     font-style: italic;
-    font-weight: normal;
     font-size: 15px;
     line-height: 18px;
     text-align: right;
@@ -168,6 +177,13 @@
     text-decoration: none !important;
 }
 
+.bold-l-text-green{
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    font-family: 'Lato', sans-serif;
+    color: #4BAF32;
+}
 .showMenu{
     position: absolute;
     top: 40px;
@@ -188,7 +204,7 @@
 }
 
 .text-middle{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -197,7 +213,7 @@
 }
 
 .text-small-black{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: italic;
     font-weight: normal;
     font-size: 12px;
@@ -218,7 +234,7 @@
     padding-right: 60px !important;
 }
 .h2-bold{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
@@ -245,7 +261,7 @@
 }
 
 .p-small{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -254,7 +270,7 @@
 }
 
 .text-small-gray{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -264,7 +280,7 @@
 }
 
 .p-small-green{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
@@ -273,7 +289,7 @@
 }
 
 .span-small-black{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
@@ -282,7 +298,7 @@
 }
 
 .h5-bold{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 16px;
@@ -345,7 +361,7 @@
 }
 
 .text-black-xs{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 13px;
@@ -354,7 +370,7 @@
 }
 
 .chat-input-text input::placeholder {
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 13px;
@@ -373,7 +389,7 @@ border: none !important;
     border: 1px solid #4BAF32;
     border-radius: 7px;
     padding: 10px;
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 12px;
@@ -395,7 +411,7 @@ border: none !important;
     margin-top: -30px;
 }
 .number-slider .v-input__append-outer{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
@@ -403,7 +419,7 @@ border: none !important;
     color: #1A1D1A;
 }
 .custom-input > .v-input__control > .v-input__slot > .v-text-field__slot > .primary--text{
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -424,9 +440,8 @@ border: none !important;
 }
 
 .green-select > .v-input__control > .v-input__slot .v-select__slot > label {
-    font-family: Lato;
-    font-style: normal;
-    font-weight: 900;
+    font-family: 'Lato', sans-serif !important;
+    font-weight: 700;
     font-size: 12px;
     line-height: 14px;
     text-align: center;
