--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -244,12 +244,18 @@
 
 .slick-prev-btn {
     font-size: 50px;
+    float: left;
+    width: 3%;
 }
-
+.slick-list{
+    float: left;
+    width: 94%;
+}
 .slick-dots {
+    width: 100%;
     display: flex;
     list-style-type: none;
-    justify-content: space-around;
+    justify-content: end;
 }
 
 .slick-dots > li > button {
@@ -399,9 +405,8 @@ border: none !important;
     width: fit-content;
 }
 
-.chat-footer{
-    border: 1px solid #4F4F4F;
-    opacity: 0.1;
+.footer-chat{
+    border-top: 1px solid #f9f9f9;
 }
 .chat-screen-mobile{
     display: none;
@@ -409,6 +414,10 @@ border: none !important;
 .number-slider{
     display: block !important;
     margin-top: -30px;
+}
+.file-input{
+    margin-top: -4px;
+    transform: rotate(45deg);
 }
 .number-slider .v-input__append-outer{
     font-family: 'Lato', sans-serif;
@@ -458,7 +467,26 @@ border: none !important;
     color: black !important;
     caret-color: black !important;
 }
+.text-center-right-media {
+    text-align: center;
+}
+.height-100{
+    height: 88%;
+    margin: 12px 0;
+}
 
+.slider-input > .v-input__control > .v-input__slot:before{
+    border: none !important;
+}
+
+.slider-input > .v-input__control{
+    margin-top: -10px !important;
+}
+@media screen and (max-width: 1263px) {
+    .font-14-text {
+        font-size: 14px !important;
+    }
+}
 @media screen and (max-width: 1223px) {
     .platoj{
         display: none;
@@ -472,12 +500,19 @@ border: none !important;
         max-width: 41.6666666667%;
     }
 }
+@media screen and (max-width: 1209px) {
+    .font-14-text-md {
+        font-size: 12px !important;
+    }
+}
+@media screen and (max-width: 1049px) {
+    .main-logo {
+        font-size: 15px;
+    }
+}
 @media screen and (max-width: 991px) {
     .slick-slider {
         display: block !important;
-    }
-    .slick-dots {
-        justify-content: end;
     }
     .slick-dots > li{
         padding-left: 3px;
@@ -486,6 +521,10 @@ border: none !important;
 @media screen and (max-width: 959px) {
     .site-logo {
         width: 79px;
+    }
+    .media-dialog {
+        padding-left: 40px !important;
+        padding-right: 40px !important;
     }
 }
 @media screen and (max-width: 848px) {
@@ -499,6 +538,13 @@ border: none !important;
     }
 }
 @media screen and (max-width: 750px) {
+    .mobil-col-8{
+        flex: 0 0 66.6666666667% !important;
+        max-width: 66.6666666667% !important;
+    }
+    .file-input{
+        margin-top: unset;
+    }
     .chat {
         width: 100%;
         right: unset;
@@ -513,6 +559,8 @@ border: none !important;
     }
     .chat-header{
         width: 100%;
+        position: relative;
+        z-index: 1;
     }
     .chat-body{
         height: 100vh;
@@ -529,7 +577,7 @@ border: none !important;
     .chat-text-body > .row{
         margin-bottom: -80px
     }
-    .chat-footer{
+    .footer-chat{
         position: absolute;
         width: 100%;
         bottom: 82px;
@@ -553,6 +601,11 @@ border: none !important;
         display: none;
     }
 }
+@media screen and (max-width: 668px) {
+    .font-14-text-media {
+        font-size: 14px !important;
+    }
+}
 @media screen and (max-width: 600px) {
     .text-left-col {
         text-align: left !important;
@@ -564,10 +617,13 @@ border: none !important;
         padding-left: 40px !important;
         padding-right: 40px !important;
     }
-}
-@media screen and (max-width: 600px) {
     .sm-text-left{
         text-align: left;
+    }
+}
+@media screen and (max-width: 599px) {
+    .text-center-right-media {
+        text-align: right;
     }
 }
 @media screen and (max-width: 555px) {
@@ -578,5 +634,10 @@ border: none !important;
     .page-title {
         font-size: 28px;
         line-height: 34px;
+    }
+}
+@media screen and (max-width: 433px) {
+    .main-logo {
+        display: none;
     }
 }
