--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -483,6 +483,10 @@ border: none !important;
     margin-top: -10px !important;
 }
 
+.box-shadow-none {
+    box-shadow: none !important;
+}
+
 .header-btn{
     width: 160px;
     height: 41px !important;
